# capC-MAP

./: .gitignore  CHANGES.rst  Makefile.am  Makefile.in  README.rst  capC-MAP  configure  configure.ac  setup.py
autom4te.cache/: output.0  output.1  traces.0  traces.1
capC/: capCtools.py  genomedigest.py  pipeline.py  postprocess.py  replicates.py  resfrags2chromsize.py  resources.py
capC/resources/: restriction_enzymes.txt
doc/: Makefile
doc/source/: advanced.rst  conf.py  faq.rst  index.rst  install.rst  intro.rst  quickstart.rst  refs.rst  usage.rst
downstream/: README.rst  R_analysis.Rmd  R_analysis.html  file_conversion.Rmd  file_conversion.html  peakC.Rmd  peakC.html  python_analysis.Rmd  python_analysis.html
downstream/data1/: captured_bin_1600_2400_RPM_DS_enhancer.bdg  captured_bin_1600_2400_RPM_Elp4.bdg  captured_bin_1600_2400_RPM_Pax6.bdg  captured_bin_1600_2400_RPM_US_enhancer.bdg  captured_bin_200_2000_RPM_DS_enhancer.bdg  captured_bin_200_2000_RPM_Elp4.bdg  captured_bin_200_2000_RPM_Pax6.bdg  captured_bin_200_2000_RPM_US_enhancer.bdg  (+10 more)
example/: README  example_config_file.txt  targets.bed
src/: Makefile.am  Makefile.in  bedfiles.cc  bedfiles.h  bedgraphfiles.cc  bedgraphfiles.h  binprofile.cc  binprofile.h  fastq.cc  fastq.h  fqdigest.cc  fqdigest.h  genome.cc  genome.h  location2fragment.cc  location2fragment.h  main_process.cc  main_process.h  messages.cc  messages.h  pair2bg.cc  pair2bg.h  parse_sam.cc  parse_sam.h  pileup2binned.cc  pileup2binned.h  postprocess.h  samfragments.cc  samfragments.h  targets.cc  targets.h  version.h.in
(+4 files in other folders)
